--- a/index.html
+++ b/index.html
@@ -13,6 +13,45 @@
   </head>
 
   <body>
+    <section class="carousel">
+      <button class="carousel_button">
+        <svg id="left" viewBox="0 0 54 69.007">
+          <path d="M47 0L3.44 34.502 47 69.007z" />
+        </svg>
+      </button>
+
+      <div class="carousel_contents-container">
+        <ul class="carousel_contents">
+          <li class="carousel_slide">
+            <a href="#">
+              <img src="/images/image1.jpg" alt="" />
+            </a>
+          </li>
+          <li class="carousel_slide">
+            <a href="#">
+              <img src="/images/image2.jpg" alt="" />
+            </a>
+          </li>
+          <li class="carousel_slide">
+            <a href="#">
+              <img src="/images/image3.jpg" alt="" />
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <button class="carousel_button">
+        <svg viewBox="0 0 54 69.007">
+          <path d="M5-.121l43.56 34.502L5 68.886z" />
+        </svg>
+      </button>
+
+      <div class="carousel_dots">
+        <button class="carousel_dot"></button>
+        <button class="carousel_dot"></button>
+        <button class="carousel_dot"></button>
+      </div>
+    </section>
     <script src="js/main.js"></script>
   </body>
 </html>
