--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <section class="carousel">
-      <button class="carousel_button">
+      <button class="carousel_button previous-button" hidden>
         <svg id="left" viewBox="0 0 54 69.007">
           <path d="M47 0L3.44 34.502 47 69.007z" />
         </svg>
@@ -22,7 +22,7 @@
 
       <div class="carousel_contents-container">
         <ul class="carousel_contents">
-          <li class="carousel_slide">
+          <li class="carousel_slide is-selected">
             <a href="#">
               <img src="/images/image1.jpg" alt="" />
             </a>
@@ -40,14 +40,14 @@
         </ul>
       </div>
 
-      <button class="carousel_button">
+      <button class="carousel_button next-button">
         <svg viewBox="0 0 54 69.007">
           <path d="M5-.121l43.56 34.502L5 68.886z" />
         </svg>
       </button>
 
       <div class="carousel_dots">
-        <button class="carousel_dot"></button>
+        <button class="carousel_dot is-selected"></button>
         <button class="carousel_dot"></button>
         <button class="carousel_dot"></button>
       </div>
